# MeshTask

./: CMakeLists.txt  CMakeUserPresets.json  README.txt
src/: Geometry.cpp  Geometry.h  JsonUtils.cpp  JsonUtils.h  Triangle.h  Utils.cpp  Utils.h  Vector3.cpp  Vector3.h  VertexNormals.cpp  VertexNormals.h  main.cpp
